--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Raleway:wght@400;700&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -6,7 +7,10 @@
   outline: none !important;
   list-style: none !important;
   text-decoration: none !important;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Raleway', sans-serif;
+}
+.stylefont{
+  font-family: 'Playfair Display', serif!important;
 }
 
 *:after,
@@ -16,6 +20,9 @@
   padding: 0;
   margin: 0;
 }
+.txt-color{
+  color: #125792;
+}
 
 html {
   scroll-behavior: smooth;
@@ -23,7 +30,7 @@ html {
 }
 
 body {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Raleway', sans-serif;
   background-color: #ffffff;
   overflow-x: hidden;
 }
@@ -34,7 +41,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: 600;
   line-height: 1.618;
 }
@@ -124,7 +131,7 @@ ul {
 
 .section-title {
   position: relative;
-  padding-left: 15px;
+  /* padding-left: 15px; */
   z-index: 1;
 }
 
@@ -135,7 +142,7 @@ ul {
   top: 6px;
   width: 40px;
   height: 40px;
-  background-color: rgba(242, 30, 78, 0.1);
+  /* background-color: rgba(242, 30, 78, 0.1); */
   border-radius: 50%;
   z-index: -1;
 }
@@ -143,6 +150,7 @@ ul {
 .section-title h2 {
   text-transform: capitalize;
   font-weight: 700;
+  color: #125792!important;
 }
 
 .section-title p {
@@ -218,6 +226,18 @@ ul {
   z-index: 1;
   /* -webkit-transition: all 0.3s ease; */
   /* transition: all 0.3s ease; */
+}
+.stylebtn{
+  text-transform: uppercase;
+  font-size: 13px;
+  letter-spacing: 2px;
+  font-weight: bold;
+  border-top-left-radius: 17px;
+  border-bottom-right-radius: 17px;
+}
+.imgstyle{
+  border-top-left-radius: 40px;
+  border-bottom-right-radius: 40px;
 }
 
 .btn-custom i {
@@ -625,7 +645,9 @@ ul {
   left: 0;
   right: 0;
   text-align: center;
-  border-radius: 50%;
+  /* border-radius: 50%; */
+  border-top-left-radius: 17px;
+  border-bottom-right-radius: 17px;
   width: 40px;
   height: 40px;
   margin: auto;
@@ -637,7 +659,7 @@ ul {
 
 .logo a {
   font-weight: 500;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 18px;
   line-height: 40px;
   text-align: center;
@@ -671,17 +693,18 @@ ul {
 
 .main-menu .cross {
   display: none;
-  width: 35px;
-  height: 35px;
+  width: 45px;
+  height: 45px;
   text-align: center;
-  border-radius: 50%;
+border-top-left-radius: 17px;
+border-bottom-right-radius: 17px;
   position: absolute;
   right: 35px;
   top: 35px;
 }
 
 .main-menu .cross i {
-  line-height: 35px;
+  line-height: 45px;
 }
 
 .main-menu .menu {
@@ -746,16 +769,18 @@ ul {
 }
 
 .menu-toggle {
-  right: 40px;
+  right: 19px;
   top: 30px;
   z-index: 999;
   text-align: center;
   position: fixed;
-  width: 35px;
-  height: 35px;
+  width: 45px;
+  height: 45px;
+  text-align: center;
   display: none;
   background-color: #125792;
-  border-radius: 50%;
+  border-top-left-radius: 17px;
+  border-bottom-right-radius: 17px;
 }
 
 .menu-toggle span {
@@ -764,8 +789,8 @@ ul {
   background-color: #ffffff;
   display: block;
   position: absolute;
-  top: 15px;
-  left: 15px;
+  top: 19px;
+  left: 20px;
   border-radius: 50%;
 }
 
